global refactoring: re-implemented everything