@@ -18,16 +18,16 @@
     </modules>
 
     <properties>
-        <maven.compiler.release>21</maven.compiler.release>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>23</maven.compiler.release>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.13.0</quarkus.platform.version>
+        <quarkus.platform.version>3.16.0.CR1</quarkus.platform.version>
+        <compiler-plugin.version>3.13.0</compiler-plugin.version>
         <surefire-plugin.version>3.1.2</surefire-plugin.version>
-        <compiler-plugin.version>3.11.0</compiler-plugin.version>
         <skipITs>true</skipITs>
     </properties>
     <dependencyManagement>
@@ -77,7 +77,8 @@
                 <version>${surefire-plugin.version}</version>
                 <configuration>
                     <systemPropertyVariables>
-                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                        <java.util.logging.manager>org.jboss.logmanager.LogManager
+                        </java.util.logging.manager>
                         <maven.home>${maven.home}</maven.home>
                     </systemPropertyVariables>
                 </configuration>
@@ -93,9 +94,11 @@
                         </goals>
                         <configuration>
                             <systemPropertyVariables>
-                                <native.image.path>${project.build.directory}/${project.build.finalName}-runner
+                                <native.image.path>
+                                    ${project.build.directory}/${project.build.finalName}-runner
                                 </native.image.path>
-                                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                                <java.util.logging.manager>org.jboss.logmanager.LogManager
+                                </java.util.logging.manager>
                                 <maven.home>${maven.home}</maven.home>
                             </systemPropertyVariables>
                         </configuration>
@@ -110,6 +113,14 @@
                     <artifactId>quarkus-maven-plugin</artifactId>
                     <version>${quarkus.platform.version}</version>
                     <extensions>true</extensions>
+                    <configuration>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
+                        <jvmArgs>--enable-preview</jvmArgs>
+                    </configuration>
                     <executions>
                         <execution>
                             <goals>
@@ -135,52 +146,6 @@
                 <skipITs>false</skipITs>
                 <quarkus.package.type>native</quarkus.package.type>
             </properties>
-        </profile>
-        <profile>
-            <id>microservice-user</id>
-            <activation/>
-            <modules>
-                <module>library</module>
-                <module>framework</module>
-                <module>application/configuration/microservice-user-configuration</module>
-                <module>application/core/domain/v1</module>
-                <module>application/core/usecases/v1</module>
-                <module>application/infrastructure/dataproviders/postgres-dataprovider/v1</module>
-            </modules>
-            <dependencyManagement>
-                <dependencies>
-                    <dependency>
-                        <groupId>${quarkus.platform.group-id}</groupId>
-                        <artifactId>${quarkus.platform.artifact-id}</artifactId>
-                        <version>${quarkus.platform.version}</version>
-                        <type>pom</type>
-                        <scope>import</scope>
-                    </dependency>
-                </dependencies>
-            </dependencyManagement>
-        </profile>
-        <profile>
-            <id>microservice-todo</id>
-            <activation/>
-            <modules>
-                <module>library</module>
-                <module>framework</module>
-                <module>application/configuration/microservice-todo-configuration</module>
-                <module>application/core/domain/v1</module>
-                <module>application/core/usecases/v1</module>
-                <module>application/infrastructure/dataproviders/postgres-dataprovider/v1</module>
-            </modules>
-            <dependencyManagement>
-                <dependencies>
-                    <dependency>
-                        <groupId>${quarkus.platform.group-id}</groupId>
-                        <artifactId>${quarkus.platform.artifact-id}</artifactId>
-                        <version>${quarkus.platform.version}</version>
-                        <type>pom</type>
-                        <scope>import</scope>
-                    </dependency>
-                </dependencies>
-            </dependencyManagement>
         </profile>
         <profile>
             <id>monolith</id>
